--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,34 +25,26 @@ dependencies {
     //        exclude group: 'com.android.support', module: 'support-annotations'
     //    })
     //    testCompile 'junit:junit:4.12'
-    // v1.8.5
-    //    compile 'com.orhanobut:logger:1.3'
-    //    compile 'com.google.code.gson:gson:2.4'
-    //    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    //    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    //    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
-    //    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    //    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-    //    compile 'com.squareup.retrofit2:converter-scalars:2.0.2'
-    //    compile 'io.reactivex:rxandroid:1.1.0'
-    //    compile 'io.reactivex:rxjava:1.1.0'
-    //    compile 'de.hdodenhof:circleimageview:2.0.0'
-    //    compile 'com.jakewharton:butterknife:8.4.0'
-    //    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    compile 'com.squareup.retrofit2:converter-scalars:2.0.2'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.3'
-    compile 'io.reactivex:rxjava:+'
-    compile 'com.trello:rxlifecycle:+'
-    compile 'com.trello:rxlifecycle-components:+'
-    compile 'com.squareup.retrofit:adapter-rxjava:+'
-    compile 'com.squareup.retrofit2:retrofit:+'
-    compile 'com.squareup.retrofit2:converter-gson:+'
-    compile 'com.squareup.retrofit2:adapter-rxjava:+'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
+
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.2'
+    // If you want to use the GPU Filters
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+
     compile 'com.android.support:support-v4:25.1.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
