--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ dependencies {
 
     compile 'fm.jiecao:jiecaovideoplayer:5.5.2'
 
+    compile 'com.jaeger.statusbaruitl:library:1.3.6'
+
+//    compile 'com.jaeger.statusbaruitl:library:1.1.1'
+
+
     compile 'com.android.support:support-v4:25.1.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
