--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     compile 'com.jaeger.statusbaruitl:library:1.3.6'
     compile 'com.android.support:support-v4:25.3.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    compile 'com.github.githubwing:DragPhotoView:1.0.1'
+
 }
