--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MainActivity"
-                  android:configChanges="orientation|screenSize|keyboardHidden"
-                  android:screenOrientation="portrait"
-            >
+        <activity
+            android:name=".ui.activity.MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait">
         </activity>
         <activity android:name=".ui.activity.WelcomeActivity">
             <intent-filter>
@@ -33,13 +33,17 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.NewsDetailActivity"
-            android:theme="@style/NewsDetailTheme"
-            >
+        <activity
+            android:name=".ui.activity.NewsDetailActivity"
+            android:theme="@style/NewsDetailTheme">
         </activity>
-        <activity android:name=".ui.activity.ImageDownLoadActivity"
-            android:theme="@style/PictureDownLoadTheme"
-            >
+        <activity
+            android:name=".ui.activity.ImageDownLoadActivity"
+            android:theme="@style/PictureDownLoadTheme">
+        </activity>
+        <activity android:name=".ui.activity.LinearSnapHelperActivity">
+        </activity>
+        <activity android:name=".ui.activity.PagerSnapHelperActivity">
         </activity>
     </application>
 
