添加自定义SnapHelper

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         </activity>
         <activity android:name=".ui.activity.PagerSnapHelperActivity">
         </activity>
+        <activity android:name=".ui.activity.CustomSnapHelperActivity">
+        </activity>
     </application>
 
 </manifest>
