--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     compile 'com.github.rubensousa:gravitysnaphelper:1.1'
 
 
+    compile ('github.hellocsl:GalleryLayoutManager:1.0.4'){
+        exclude group: 'com.android.support', module:'recyclerview-v7'
+    }
 
 
 
