--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
         </activity>
         <activity android:name=".ui.activity.ScrollZoomLayoutManagerActivity">
         </activity>
+        <activity android:name=".ui.activity.GalleryLayoutManagerActivity">
+        </activity>
+        <activity android:name=".ui.activity.ChannelActivity">
+        </activity>
     </application>
 
 </manifest>
